# wg21-papers

./: CLAUDE.md
.github/workflows/: tomd-tests.yml
cite/: README.md  cite.py
cite/tests/: test_fix_ops.py  test_parse.py  test_renumber.py  test_uncited_links.py  test_url.py  test_versioning.py  test_year_and_authors.py
paperworks/: CLAUDE.md  README.md  code-review.md  paperworks.py  requirements.txt
paperworks/docs/: ui-operations.md
paperworks/lib/: inventory.py  isocpp.py  pdf_reader.py  server.py  server_config.py
paperworks/tests/: test_inventory.py  test_pdf_reader.py  test_server.py
research/: bitint-int128-rationale.md  senders-research.md
scrivener/: .gitignore  CLAUDE.md  KEEPWITHNEXT-BUG.md  README.md  TESTING.md  code-review.md  fonts.yaml  gap-report.md  requirements.txt  scrivener.py  test-kitchen-sink.md
scrivener/css/: default.css
scrivener/lib/: __init__.py  builder.py  catalog.py  colors.py  config.py  css.py  flowables.py  (+9 more)
source/: CLAUDE.md  d0000-f-literal-expansion.md  findings.md
tomd/: .gitignore  CLAUDE.md  lib-review.md  main.py  pyproject.toml  review.md
tomd/lib/: __init__.py  similarity.py  toc.py
tomd/lib/html/: __init__.py  extract.py  render.py
tomd/lib/pdf/: __init__.py  cleanup.py  emit.py  extract.py  mono.py  spans.py  structure.py  table.py  types.py  wg21.py  wording.py
tomd/tests/: test_cleanup.py  test_emit.py  test_header_footer.py  test_html_render.py  test_mono.py  test_similarity.py  test_structure.py  test_table.py  test_toc.py  test_wg21.py  test_wording.py
tools/: disclose.md  is-this-cpp.md
(+203 files in other folders)
